--- a/1.html
+++ b/1.html
@@ -258,7 +258,9 @@
               <a class="more_btn" href="1.html">
                 <div class="row">랍스타룸 유빈</div>
               </a>
-              <div class="row">나이스샵 은하</div>
+              <a class="more_btn" href="5.html">
+                <div class="row">나이스샵 은하</div>
+              </a>
               <div class="row">다정하게 다정</div>
             </div>
             <div class="col">
