--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
       </div>
       <div class="content main3">
         <div class="desc_main">
-            “취향은 정확하게 설명하기 어렵죠.<br/>
-            ‘나는 이게 좋은데 넌 안 좋아?’<br/>
-            이렇게 밖에 이야기할 수 없는 거잖아요.”
+          “취향은 정확하게 설명하기 어렵죠.<br/>
+          ‘나는 이게 좋은데 넌 안 좋아?’<br/>
+          이렇게 밖에 이야기할 수 없는 거잖아요.”
         </div>
         <div class="more_main">
           <a class="nav_menu_btn" href="./3.html">
@@ -83,17 +83,19 @@
       </div>
       <div class="content main4">
         <div class="desc_main">
-            “여성 본인이 아름다워질 필요는 없어요.<br/>
-            주위의 아름다움을 발견할 수 있는 사람이<br/>
-            아름다운 사회를 만들어 나가는 거죠.” 
+          “여성 본인이 아름다워질 필요는 없어요.<br/>
+          주위의 아름다움을 발견할 수 있는 사람이<br/>
+          아름다운 사회를 만들어 나가는 거죠.” 
         </div>
         <div class="more_main">
-          <div class="more_btn">
-            <div>MORE</div>
-            <div>
-              <img src="assets/images/arrow_white.png" alt="">
+          <a class="nav_menu_btn" href="./3.html">
+            <div class="more_btn">
+              <div>MORE</div>
+              <div>
+                <img src="assets/images/arrow_white.png" alt="">
+              </div>
             </div>
-          </div>
+          </a>
         </div>
       </div>
       <div class="content main5">
@@ -204,25 +206,27 @@
               </span>
             </div>
           </a>
-          <div class="item item2">
-            <div class="subject">
-              아름다운 취향과<br/>
-              여성 사이의 긴장
+          <a class="nav_menu_btn" href="./2.html">
+            <div class="item item2">
+              <div class="subject">
+                아름다운 취향과<br/>
+                여성 사이의 긴장
+              </div>
+              <div class="hidden">
+                여성 본인이 아름다워질 필요는 없어요.
+                주위의 아름다움을 발견할 수 있는 사람이
+                아름다운 사회를 만들어 나가는 거죠.
+              </div>
+              <div class="view">
+                  <span class="bold">나이스샵 은하</span>의<br/>
+                인터뷰 보러가기
+              </div>
+              <span class='arrow'>
+                <img class='arrow_white' src="assets/images/arrow_white.png"/>
+                <img class='arrow_black' src="assets/images/arrow_black.png"/>
+              </span>
             </div>
-            <div class="hidden">
-              여성 본인이 아름다워질 필요는 없어요.
-              주위의 아름다움을 발견할 수 있는 사람이
-              아름다운 사회를 만들어 나가는 거죠.
-            </div>
-            <div class="view">
-                <span class="bold">나이스샵 은하</span>의<br/>
-              인터뷰 보러가기
-            </div>
-            <span class='arrow'>
-              <img class='arrow_white' src="assets/images/arrow_white.png"/>
-              <img class='arrow_black' src="assets/images/arrow_black.png"/>
-            </span>
-          </div>
+          </a>
         </div>
         <div class="col">
           <a class="nav_menu_btn" href="./1.html">
@@ -353,7 +357,9 @@
               <a class="more_btn" href="1.html">
                 <div class="row">랍스타룸 유빈</div>
               </a>
-              <div class="row">나이스샵 은하</div>
+              <a class="more_btn" href="5.html">
+                <div class="row">나이스샵 은하</div>
+              </a>
               <div class="row">다정하게 다정</div>
             </div>
             <div class="col">
