feat. 나이스샵=>나이스숍

--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                 아름다운 사회를 만들어 나가는 거죠.
               </div>
               <div class="view">
-                  <span class="bold">나이스샵 은하</span>의<br/>
+                  <span class="bold">나이스숍 은하</span>의<br/>
                 인터뷰 보러가기
               </div>
               <span class='arrow'>
@@ -358,7 +358,7 @@
                 <div class="row">랍스타룸 유빈</div>
               </a>
               <a class="more_btn" href="5.html">
-                <div class="row">나이스샵 은하</div>
+                <div class="row">나이스숍 은하</div>
               </a>
               <div class="row">다정하게 다정</div>
             </div>
