--- a/2.html
+++ b/2.html
@@ -295,7 +295,7 @@
                   <div class="row">랍스타룸 유빈</div>
                 </a>
                 <a class="more_btn" href="5.html">
-                  <div class="row">나이스샵 은하</div>
+                  <div class="row">나이스숍 은하</div>
                 </a>
                 <div class="row">다정하게 다정</div>
               </div>
