--- a/4.html
+++ b/4.html
@@ -245,7 +245,9 @@
                 <a class="more_btn" href="2.html">
                   <div class="row">소목장세미 혜미</div>
                 </a>
-                <div class="row">포근반짝 수미와 진영</div>
+                <a class="more_btn" href="6.html">
+                  <div class="row">포근반짝 수미와 진영</div>
+                </a>
               </div>
               <div class="col">
                 <div class="row">&nbsp;</div>
