--- a/index.html
+++ b/index.html
@@ -103,12 +103,14 @@
             “저희는 항상 진심이거든요.”
         </div>
         <div class="more_main">
+          <a class="nav_menu_btn" href="./5.html">
           <div class="more_btn">
             <div>MORE</div>
             <div>
               <img src="assets/images/arrow_white.png" alt="">
             </div>
           </div>
+          </a>
         </div>
       </div>
       <div class="content main6">
@@ -273,7 +275,8 @@
         </div>
         <div class="col">
           <div class="logo_big"></div>
-          <!-- <img src="assets/images/logo_big.png"/> -->
+          <a class="nav_menu_btn" href="./6.html">
+          
           <div class="item item5">
             <div class="subject">
               우리만의 방식으로<br/>
@@ -290,6 +293,7 @@
                 <img src="assets/images/arrow_white.png"/>
               </span>
           </div>
+          </a>
           <img class="sponsor_icon" src="assets/images/sponsor.png"/>
         </div>
         <div class="col">
@@ -367,7 +371,9 @@
               <a class="more_btn" href="2.html">
                 <div class="row">소목장세미 혜미</div>
               </a>
-              <div class="row">포근반짝 수미와 진영</div>
+              <a class="more_btn" href="6.html">
+                <div class="row">포근반짝 수미와 진영</div>
+              </a>
             </div>
             <div class="col">
               <div class="row">&nbsp;</div>
