fix. 오드 스튜디오 텍스트 수정

--- a/4.html
+++ b/4.html
@@ -252,7 +252,7 @@
               <div class="col">
                 <div class="row">&nbsp;</div>
                 <a class="more_btn" href="3.html">
-                  <div class="row">오드스튜디오 주혜</div>
+                  <div class="row">오드 스튜디오 서울 주혜</div>
                 </a>
                 <a class="more_btn" href="4.html">
                   <div class="row">바이부 경민</div>
