--- a/3.html
+++ b/3.html
@@ -73,8 +73,8 @@
           <div class="title">영감</div>
         </div>
         <div style="padding-top:16px;">
-          대학에서 만난 두 친구와 함께  주혜는 오드스튜디오를 운영중이다. 2021년 1월에 문을 연 오드스튜디오는 유튜브에 플레이스트를 업로드하고, 네이버스토어를 통해  휴대폰 액세서리를 제작 판매한다.    유튜브 플레이리스트가 빠른 구독자 증가를 보이며 성장하고 있지만 
-          주혜는 브랜드 운영이 아닌 다른 진로를 탐색 중이다. 인터뷰를 하면서 처음엔 성장하고 있는 브랜드를 두고 새로운 진로를 탐색한다는 점이 의아했다. 왜 돈 버는 수단으로 가져가지 않느냐, 직업으로 가져갈 생각은 없는가에 대한 거듭된 의문에 주혜는 취향과 밀접한 이 일을 대하는 명확한 생각과 태도로 답했다. 그리고 다른 누구도 아닌 스스로를 위한 활동이라는 점에서  주혜는 오드스튜디오가 자신의 취향을 공유하고 자존감을 지켜주는 창구라고 말했다. 
+          대학에서 만난 두 친구와 함께  주혜는 오드 스튜디오 서울을 운영중이다. 2021년 1월에 문을 연 오드 스튜디오 서울는 유튜브에 플레이스트를 업로드하고, 네이버스토어를 통해  휴대폰 액세서리를 제작 판매한다.    유튜브 플레이리스트가 빠른 구독자 증가를 보이며 성장하고 있지만 
+          주혜는 브랜드 운영이 아닌 다른 진로를 탐색 중이다. 인터뷰를 하면서 처음엔 성장하고 있는 브랜드를 두고 새로운 진로를 탐색한다는 점이 의아했다. 왜 돈 버는 수단으로 가져가지 않느냐, 직업으로 가져갈 생각은 없는가에 대한 거듭된 의문에 주혜는 취향과 밀접한 이 일을 대하는 명확한 생각과 태도로 답했다. 그리고 다른 누구도 아닌 스스로를 위한 활동이라는 점에서 주혜는 오드 스튜디오 서울이 자신의 취향을 공유하고 자존감을 지켜주는 창구라고 말했다. 
         </div>
       </div>
     </div>
@@ -88,11 +88,11 @@
       <div class="right noborder odd">
           <img src="./assets/images/page3_img2.png" alt="" style="margin: 0 0 40px 0;">
         <div class="interview_q p3">
-          오드스튜디오를 세 분이서 함께 운영하시죠. 어떤 경험에서 ‘우리가 비슷한 취향을 갖고 있으니까 같이 일해보자.’라고 결정하게 되었는지 궁금해요.
+          오드 스튜디오 서울을 세 분이서 함께 운영하시죠. 어떤 경험에서 ‘우리가 비슷한 취향을 갖고 있으니까 같이 일해보자.’라고 결정하게 되었는지 궁금해요.
         </div>
         <div class="interview_a p3">
-          대학교 동기인 친구와는 1학년 때부터 함께 프로젝트를 많이 했어요. 학교 주변 공간 큐레이팅, 출판물, 학교 신문사, 그리고 교환학생도 같은 시기에 다녀왔어요. 제일 친한 친구이자 비슷한 게 많은 친구예요. 거기에 친한 후배도 같이 만나서 전시도 다니고 하면서 셋이서 친해졌고요. 
-          작년에 친구가 스마트 스토어를 열고 싶다는 의견을 냈어요. 브랜드들을 살펴보니 디자이너 브랜드를 살펴보니 20대 초반을 겨냥한 귀여운 브랜드나 아예 30대를 겨냥한 브랜드는 많은데 20대 후반에 돈은 많지 않지만 깔끔하고 클래식한 무드를 가진 브랜드는 잘 없더라고요. 세 명이서 되게 취향도 비슷하고 뭔가 좋아하는 것들도 비슷하다 보니 우리를 위한 브랜드를 만들어보고 싶었어요.
+          대학교 동기인 친구와는 1학년 때부터 함께 프로젝트를 많이 했어요. 학교 주변 공간 큐레이팅, 독립 출판물, 그리고 교환학생도 같은 시기에 다녀왔어요. 제일 친한 친구이자 비슷한 게 많은 친구예요. 거기에 친한 후배도 같이 만나서 전시도 다니고 하면서 셋이서 친해졌고요. 
+          작년에 친구가 스마트 스토어를 열고 싶다는 의견을 냈어요. 디자이너 브랜드를 살펴보니 20대 초반을 겨냥한 귀여운 브랜드나 아예 30대를 겨냥한 브랜드는 많은데 20대 후반에 돈은 많지 않지만 깔끔하고 클래식한 무드를 가진 브랜드는 잘 없더라고요. 세 명이서 되게 취향도 비슷하고 뭔가 좋아하는 것들도 비슷하다 보니 우리를 위한 브랜드를 만들어보고 싶었어요.
         </div>
       </div>
     </div>
@@ -128,7 +128,7 @@
       <div class="right noborder">
         <div class="interview_a p3">
         <div class="heart_right"></div>
-          저희 셋 다 맨날 “이게 우리의 자존감 지킴이다.”라고 해요. 그래서 더 잘하고 싶고 지속하게 되는 것 같아요. 최근에는 구독자가 많아지면서 사람들의 요구도 많아지고, 일이 무겁게 느껴져서 ‘이걸 올려도 되나?’하는 고민들이 많아졌어요. 뒤바뀌었다고 해야 되나요? 그냥 좋아서 올린 건데 사람들이 이렇다 저렇다 이야기를 하니까 고민하는 제 모습을 보니까 내가 바라던 건 이런 게 아니었는데 하는 생각이 드는 거예요. 그래서 생각을 바꿨어요. 우리도 그냥 소비자일 뿐이고, 내가 잘나서 이걸 하는 게 아니라 그냥 비슷한 사람들 중 만드는 사람이니까요. 편하게 해야 듣는 사람도 편하게 느낄 것이라고 생각했어요. 어쨌든 좋아서 하고, 나도 좋기 위해서 하는 거니까요.
+          저희 셋 다 맨날 “이게 우리의 자존감 지킴이다.”라고 해요. 그래서 더 잘하고 싶고 지속하게 되는 것 같아요. 최근에는 구독자가 많아지면서 사람들의 요구도 많아지고, 일이 무겁게 느껴져서 ‘이걸 올려도 되나?’하는 고민들이 많아졌어요. 뒤바뀌었다고 해야 되나요? 그냥 좋아서 올린 건데 사람들이 이렇다 저렇다 이야기하는 걸로 고민하는 제 모습을 보니까 내가 바라던 건 이런 게 아니었는데 하는 생각이 드는 거예요. 그래서 생각을 바꿨어요. 우리도 그냥 소비자일 뿐이고, 내가 잘나서 이걸 하는 게 아니라 그냥 비슷한 사람들 중 만드는 사람이니까요. 편하게 해야 듣는 사람도 편하게 느낄 것이라고 생각했어요. 어쨌든 좋아서 하고, 나도 좋기 위해서 하는 거니까요.
         </div>
       </div>  
     </div>
@@ -152,7 +152,7 @@
               유튜브가 잘 되고 인정도 받으니까 진로나 미래 계획을 이쪽으로 생각하지 않으셨을까 궁금했어요.
             </div>
             <div class="interview_a p3">
-                최근에 사춘기가 와서 고민을 많이 했어요. 지금은 어차피 대학원을 가니까 프로젝트 형식으로 해보고 싶은 것들을 더 해보고 나서 결정하지 않을까 생각하고 있어요. 이거 하나 가지고 “나 너무 잘하는 것 같아.”하기엔 성급하니까요. 그리고 일로 가져간다면 클라이언트나 다른 사람들이 원하는 걸 만들어야 하는데 내가 좋아하는 것과 조율하기가 쉽지 않더라고요.
+                최근에 사춘기가 와서 고민을 많이 했어요. 지금은 어차피 대학원을 다니니까 프로젝트 형식으로 해보고 싶은 것들을 더 해보고 나서 결정하지 않을까 생각하고 있어요. 이거 하나 가지고 “나 너무 잘하는 것 같아.”하기엔 성급하니까요. 그리고 일로 가져간다면 클라이언트나 다른 사람들이 원하는 걸 만들어야 하는데 내가 좋아하는 것과 조율하기가 쉽지 않더라고요.
             </div>
         </div>  
       </div>
@@ -180,7 +180,7 @@
             
           <div class="left noborder">
             <div class="interview_a p3">
-                제가 생각했을 때 프로젝트는 보수 없이, 보수는 플러스알파의 느낌으로 빨리빨리 해 볼 수 있는 것들이라 생각해요. 일은 큰 틀 안에서 역할을 해내는 것, 어쨌든 열심히 공부를 해왔으니까 공부했던 것들을 좀 써먹을 수 있는 것들이라고 생각해요. 이 생각을 고수해야겠다고 생각했던 게 제가 미디어학과를 나왔어요. 그때 공부하면서 생각했던 것과도 연결되는데 유튜브는 성실하다고 잘 되는 건 아닌 것 같 아요. 유튜브 콘텐츠가 직관적인 측면이 커서 열심히 한다고 잘 되기보단 딱 봤을 때 괜찮다, 좋다 이런 느낌이 훨씬 더 중요한 플랫폼인 것 같아요. 
+              일은 큰 틀 안에서 일정한 역할을 해내고, 열심히 공부해온 것들을 써먹을 수 있는 것으로 하고 싶어요. 이 생각을 하게 된게, 미디어학과에서 공부를 하면서 콘텐츠를 만드는게 성실함으로만 되는 것은 아닌 것 같더라고요. 특히 유튜브 콘텐츠는 직관적인 측면이 크니까 열심히 해서 잘 된다기보다는 딱 봤을 때 괜찮다, 좋다 이런 느낌이 훨씬 더 중요한 것 같아요. 그래서 제가 열심히 하더라도 그만큼의 성과가 안나온다 라고 생각하는 때도 있는 것 같구요.
             </div>
             <div style="height: 630px;overflow: hidden;">
               <img src="./assets/images/page3_img5.png" alt=""
@@ -190,8 +190,6 @@
 
           <div class="right noborder">
             <div class="interview_a p3">
-                제가 엄청 열심히 해도 뭔가 이게 아닌가 이런 생각을 되게 여러 번 했었어요. 
-              <br/><br/>
               공부는 내가 이만큼 하면 이만큼이 나오잖아요. 근데 콘텐츠는 내가 이만큼 고민하고 시간을 쓰는 것보다는 하나의 좋은 아이디어나 포인트들이 오히려 더 큰 것들을 많이 가져오니까 이걸 업으로 삼기에는 되게 두렵다고 생각을 했었어요. 왜냐하면 안정적인 것들은 아니니까. 하지만 이런 걸 좋아하니까 프로젝트로 운영하고 있어요.
             </div>
             <br/>
@@ -199,7 +197,7 @@
             <br/>
             <br/>
             <br/>
-            <div class="interview_q p3">
+            <div class="interview_q p3 anchor">
               듣다 보니까 내가 일을 못했을 때의 좌절감과 내 취향이 타인에게 환영을 못 받거나 거부당했을 때의 좌절감은 다를 것 같다는 느낌이 들어요.
             </div>
             <div class="interview_a p3">
@@ -230,7 +228,7 @@
                 영감은 어디서 받으시나요? 노래 선곡뿐 아니라 섬네일에 대한 칭찬도 댓글에 가득하더라고요.
               </div>
               <div class="interview_a p3">
-                  네이버 스토어팜 같은 경우엔 셋이서 무드보드를 만들어보기도 하고, 비슷한 브랜드들도 많이 찾아봤어요. 저는 어떤 걸 잘하고 싶을 때 그걸 잘하는 사람을 따라 하려 하거든요. 그렇게 하다 보면 자연스럽게 잘 하게 되어있는 것 같아요. 유튜브 같은 경우에는 저희가 찍은 사진들에서 영감을 받아서 플레이리스트를 짜요. 노래는 평소에 많이 듣지만 여러 가지를 듣잖아요. 그래서 ‘플레이리스트 뭘 만들지?’했을 때 너무 추상적인데 사진을 보면 이런 느낌으로 만들어야지 하는 생각이 들어요. 셋이서 각자 찍은 사진들을 모아두는데 앨범을 보다가 “이 사진 너무 좋다.”하면 거기에 어울리는 콘셉트로 만드는 거죠.
+                유튜브 같은 경우에는 저희가 찍은 사진들에서 영감을 받아서 플레이리스트를 짜요. 노래는 평소에 많이 듣지만 여러 가지를 듣잖아요. 그래서 ‘플레이리스트 뭘 만들지?’했을 때 너무 추상적인데 사진을 보면 이런 느낌으로 만들어야지 하는 생각이 들어요. 셋이서 각자 찍은 사진들을 모아두는데 앨범을 보다가 “이 사진 너무 좋다.”하면 거기에 어울리는 콘셉트로 만드는 거죠.
                 <br/>
                 그리고 저희는 세 명이다 보니까 돌아가서 해서 그게 너무 다행인 것 같아요. 세 명 취향이 다 비슷하지만 어쨌든 각자 좋아하는 장르가 다르거든요. 나는 이제 더 이상 새로운 게 없다 했는데 다른 친구가 “이거 좋더라!”하면 또 같이 들어보고… 셋이 비슷하지만 또 달라서 다채로운 걸 만들 수 있어요. 혼자였으면 절대 못했을 것 같아요.
               </div>
@@ -282,7 +280,7 @@
               <div class="col">
                 <div class="row">&nbsp;</div>
                 <a class="more_btn" href="3.html">
-                  <div class="row">오드스튜디오 주혜</div>
+                  <div class="row">오드 스튜디오 서울 주혜</div>
                 </a>
                 <a class="more_btn" href="4.html">
                   <div class="row">바이부 경민</div>
@@ -335,7 +333,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script>
         const anchorNav = document.getElementsByClassName('anchor_nav');
-        const anchor = document.getElementsByClassName('interview_title anchor');
+        const anchor = document.getElementsByClassName('anchor');
     
         anchorNav[0].addEventListener('click', () => {
           window.scrollBy({top: anchor[0].getBoundingClientRect().top, behavior:'smooth'});
