--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
               이렇게 밖에 이야기할 수 없는 거잖아요.
             </div>
             <div class="view">
-              <span class="bold">오드스튜디오 주혜</span>의<br/>
+              <span class="bold">오드 스튜디오 서울 주혜</span>의<br/>
               인터뷰 보러가기
             </div>
             <span class='arrow'>
@@ -378,7 +378,7 @@
             <div class="col">
               <div class="row">&nbsp;</div>
               <a class="more_btn" href="3.html">
-                <div class="row">오드스튜디오 주혜</div>
+                <div class="row">오드 스튜디오 서울 주혜</div>
               </a>
               <a class="more_btn" href="4.html">
                 <div class="row">바이부 경민</div>
