--- a/2.html
+++ b/2.html
@@ -92,7 +92,6 @@
         <div class="interview_a p2">
           공방 시작한 초기에 안 풀리고 그럴 때 민속박물관 이런 데 가서 보는 거예요. 옛날 사람들 어떻게 만들었지? 이거를 어떻게 사용하기 쉽게 만들었지? 왜 이렇게 만들었지? 이런 거 그냥 보면 되게 재밌거든요. 거기서 또 아이디어가 오는 경우가 있어서 나가서 계속 보고 아니면 인터넷으로도 많이 봐요. 저 사람 이거 저렇게 했네 되게 똑똑하다 이런 식으로. 
         </div>
-        <br/>
         <div class="interview_q p2">
           전시 찾아다니는 것도 에너지, 시간이 많이 들잖아요. 그리고 잘 안될 때면 다음 달 생계 걱정도 있었을 텐데 어떻게 받아들이셨어요?
         </div>
@@ -120,7 +119,6 @@
           <div class="interview_a p2">
             제일 대표할 게 디자인이긴 해요. 시작했을 때 누구 해드리면 다른 분 소개해 주시고 그럼 또 새로운 작업하면서 배우는 것도 있고 그런 식으로 성장했어요. 부딪히면서 천천히 4-5년 동안 만든 게 있어요. 아무리 친구가 그냥 필요하다고 해서 만드는 거라도 디자인 진짜 잘하려고 노력을 많이 했어요. 내가 마음에 들 때까지 계속 디자인 연구해서 심지어 길 때는 제작 기간이 6개월까지 걸린 적도 있어요. 원래 가구는 만들 때 뗐다 붙였다 이런 게 말이 안 되는데 조소과 출신이니까 마음에 안 들면 뗐다가 막 여기저기 붙이기도 했어요. 
           </div>
-          <br/>
           <div style="text-align: center">
             <img src="./assets/images/page2_heart.png" alt="" style="width:413px;margin:30px 0 0 0;">
           </div>
@@ -137,9 +135,9 @@
           </div>
           <div class="interview_a p2">
             저는 일단 되게 중요한 게 절대 남이 했던 거는 하지 말자. 웬만하면. 하지 말자. 왜냐하면 제가 소목장 세미를 하는 이유가 당연히 돈을 벌고 이런 것도 있지만 어떤 남과 다른 나를 찾고 그것을 남들에게 보여주고 내가 이렇게 할 수 있다고 이야기하는 게 되게 중요해요. 그래서 남이 했던 거를 비슷하게 하는 거는 의미가 없는 거예요.
-            <br/><br/>
+            <br/>
             나만의 가구를 만들어야 돼요. 역사적으로 봤을 때 유명한 디자이너들은 정말 명확한 자기 스타일이 있어요. 그것 때문에 유명해졌고 증명이 된 거예요. 내가 남들과 달라라고 이야기하는 것과 남들이 봤을 때도 “이 사람 가구가 너무 달라서 이 돈을 줘서 사야 돼” 라고 하는 거는 완전 다른 거잖아요. 소목장 세미는 그렇게 정점 찍고 싶은 욕심이 있죠.
-            <br/><br/>
+            <br/>
             그런데 디제잉은 다른 것 같아요. 다른 플레이를 하고 싶지만 남들이 다 좋아하는 플레이를 하고싶기도 해요. 내 장르를 남들이 다 좋아할 수 없잖아요. 그렇게 되고 싶지도 않고. 그래서 디제잉은 그냥 되는 대로 하는 것 같아요. 관객이 한 명이어도 정말 그 사람 잘 놀면 그날 되게 뿌듯해요. 
           </div>
         </div>  
@@ -177,9 +175,7 @@
             </div>
             <div class="interview_a p2">
               있어요. 보통 주중에 진득하게 앉아서 목공 작업을 해요. 계속 머리로 계획 세우고 만들어보는 정적인 작업을 해요. 비교적 다른 직업에 비해 정적이지 않을 수 있는데 제 기준에는 정적이에요. 
-            </div>
-            <br/>
-            <div class="interview_a p2">
+              <br>
               그러고서 주말 밤에는 디제잉을 하면서 즉흥적인 걸로 다 발산이 되니까 쌓인 스트레스가 해소되는 거죠. 그래서 어떻게 보면 되게 좋은 서클이 됐죠.
             </div>
           </div>
@@ -223,7 +219,6 @@
               <div class="interview_title anchor p2">
                 여성이라는<br> 
                 위치성
-                <br/>
                 <br/>
               </div>
               <div class="interview_q p2">
@@ -297,7 +292,9 @@
                 <a class="more_btn" href="5.html">
                   <div class="row">나이스숍 은하</div>
                 </a>
-                <div class="row">다정하게 다정</div>
+                <a class="more_btn" href="7.html">
+                  <div class="row">다정하게 다정</div>
+                </a>
               </div>
               <div class="col">
                 <div class="row">&nbsp;</div>
