--- a/6.html
+++ b/6.html
@@ -200,7 +200,9 @@
                 <a class="more_btn" href="5.html">
                   <div class="row">나이스숍 은하</div>
                 </a>
-                <div class="row">다정하게 다정</div>
+                <a class="more_btn" href="7.html">
+                  <div class="row">다정하게 다정</div>
+                </a>
               </div>
               <div class="col">
                 <div class="row">&nbsp;</div>
