--- a/index.html
+++ b/index.html
@@ -135,12 +135,14 @@
             늘 변화의 흐름을 예민하게 봐야 돼요.”
         </div>
         <div class="more_main">
+            <a class="nav_menu_btn" href="./7.html">
           <div class="more_btn">
             <div>MORE</div>
             <div>
               <img src="assets/images/arrow_white.png" alt="">
             </div>
           </div>
+          </a>
         </div>
       </div>
       </div>
@@ -317,6 +319,7 @@
             </span>
           </div>
           </a>
+          <a class="nav_menu_btn" href="./7.html">
           <div class="item item7">
             <div class="subject">
               생활로서의 취향
@@ -333,6 +336,7 @@
               <img class='arrow_black' src="assets/images/arrow_black.png"/>
             </span>
           </div>
+        </a>  
         </div>
       </div>
     </div>
@@ -364,7 +368,9 @@
               <a class="more_btn" href="5.html">
                 <div class="row">나이스숍 은하</div>
               </a>
-              <div class="row">다정하게 다정</div>
+              <a class="more_btn" href="7.html">
+                <div class="row">다정하게 다정</div>
+              </a>
             </div>
             <div class="col">
               <div class="row">&nbsp;</div>
