--- a/3.html
+++ b/3.html
@@ -236,7 +236,7 @@
         </div>
 
         <div class="footer_interview">
-          <a class="more_btn" href="4.html">
+          <a class="more_btn" href="4">
             <div>다음 인터뷰 보러가기</div>
             <div>
               <img src="assets/images/arrow_black.png"/>
@@ -260,31 +260,31 @@
               </div>
               <div class="col">
                 <div class="row en">Interviews</div>
-                <a class="more_btn" href="1.html">
+                <a class="more_btn" href="1">
                   <div class="row">랍스타룸 유빈</div>
                 </a>
-                <a class="more_btn" href="5.html">
+                <a class="more_btn" href="5">
                   <div class="row">나이스숍 은하</div>
                 </a>
-                <a class="more_btn" href="7.html">
+                <a class="more_btn" href="7">
                   <div class="row">다정하게 다정</div>
                 </a>
               </div>
               <div class="col">
                 <div class="row">&nbsp;</div>
-                <a class="more_btn" href="2.html">
+                <a class="more_btn" href="2">
                   <div class="row">소목장세미 혜미</div>
                 </a>
-                <a class="more_btn" href="6.html">
+                <a class="more_btn" href="6">
                   <div class="row">포근반짝 수미와 진영</div>
                 </a>
               </div>
               <div class="col">
                 <div class="row">&nbsp;</div>
-                <a class="more_btn" href="3.html">
+                <a class="more_btn" href="3">
                   <div class="row">오드 스튜디오 서울 주혜</div>
                 </a>
-                <a class="more_btn" href="4.html">
+                <a class="more_btn" href="4">
                   <div class="row">바이부 경민</div>
                 </a>
               </div>
