--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           그래서 더 많이 노출시키려고 해요.”
         </div>
         <div class="more_main">
-          <a class="nav_menu_btn" href="./1.html">
+          <a class="nav_menu_btn" href="./1">
           <div class="more_btn">
             <div>MORE</div>
             <div>
@@ -54,7 +54,7 @@
           내가 이렇게 할 수 있다고 이야기하는 게 중요해요.”
         </div>
         <div class="more_main">
-            <a class="nav_menu_btn" href="./2.html">
+            <a class="nav_menu_btn" href="./2">
           <div class="more_btn">
             <div>MORE</div>
             <div>
@@ -71,7 +71,7 @@
           이렇게 밖에 이야기할 수 없는 거잖아요.”
         </div>
         <div class="more_main">
-          <a class="nav_menu_btn" href="./3.html">
+          <a class="nav_menu_btn" href="./3">
           <div class="more_btn">
             <div>MORE</div>
             <div>
@@ -88,7 +88,7 @@
           아름다운 사회를 만들어 나가는 거죠.” 
         </div>
         <div class="more_main">
-          <a class="nav_menu_btn" href="./5.html">
+          <a class="nav_menu_btn" href="./5">
             <div class="more_btn">
               <div>MORE</div>
               <div>
@@ -103,7 +103,7 @@
             “저희는 항상 진심이거든요.”
         </div>
         <div class="more_main">
-          <a class="nav_menu_btn" href="./5.html">
+          <a class="nav_menu_btn" href="./5">
           <div class="more_btn">
             <div>MORE</div>
             <div>
@@ -119,7 +119,7 @@
             나만의 스타일로 소화할 수 있다면 다 좋아요.”
         </div>
         <div class="more_main">
-            <a class="nav_menu_btn" href="./4.html">
+            <a class="nav_menu_btn" href="./4">
           <div class="more_btn">
             <div>MORE</div>
             <div>
@@ -135,7 +135,7 @@
             늘 변화의 흐름을 예민하게 봐야 돼요.”
         </div>
         <div class="more_main">
-            <a class="nav_menu_btn" href="./7.html">
+            <a class="nav_menu_btn" href="./7">
           <div class="more_btn">
             <div>MORE</div>
             <div>
@@ -187,7 +187,7 @@
     <div class="interview_items">
       <div class="row">
         <div class="col">
-          <a class="nav_menu_btn" href="./2.html">
+          <a class="nav_menu_btn" href="./2">
           <div class="item item1">
             <div class="subject">
               자아를 확장하는<br/>
@@ -210,7 +210,7 @@
               </span>
             </div>
           </a>
-          <a class="nav_menu_btn" href="./2.html">
+          <a class="nav_menu_btn" href="./2">
             <div class="item item2">
               <div class="subject">
                 아름다운 취향과<br/>
@@ -233,7 +233,7 @@
           </a>
         </div>
         <div class="col">
-          <a class="nav_menu_btn" href="./1.html">
+          <a class="nav_menu_btn" href="./1">
           <div class="item item3">
             <div class="subject">
               사랑을 담아,<br/>
@@ -254,7 +254,7 @@
             </div>
           </a>
           <img class="work_icon" src="assets/images/work.png"/>
-          <a class="nav_menu_btn" href="./4.html">
+          <a class="nav_menu_btn" href="./4">
           <div class="item item4">
             <div class="subject">
               나만의 취향, 무드,<br/>
@@ -277,7 +277,7 @@
         </div>
         <div class="col">
           <div class="logo_big"></div>
-          <a class="nav_menu_btn" href="./6.html">
+          <a class="nav_menu_btn" href="./6">
           
           <div class="item item5">
             <div class="subject">
@@ -299,7 +299,7 @@
           <img class="sponsor_icon" src="assets/images/sponsor.png"/>
         </div>
         <div class="col">
-          <a class="nav_menu_btn" href="./3.html">
+          <a class="nav_menu_btn" href="./3">
           <div class="item item6">
             <div class="subject">
               취향 공유의 기쁨과 슬픔
@@ -319,7 +319,7 @@
             </span>
           </div>
           </a>
-          <a class="nav_menu_btn" href="./7.html">
+          <a class="nav_menu_btn" href="./7">
           <div class="item item7">
             <div class="subject">
               생활로서의 취향
@@ -362,31 +362,31 @@
             </div>
             <div class="col">
               <div class="row en">Interviews</div>
-              <a class="more_btn" href="1.html">
+              <a class="more_btn" href="1">
                 <div class="row">랍스타룸 유빈</div>
               </a>
-              <a class="more_btn" href="5.html">
+              <a class="more_btn" href="5">
                 <div class="row">나이스숍 은하</div>
               </a>
-              <a class="more_btn" href="7.html">
+              <a class="more_btn" href="7">
                 <div class="row">다정하게 다정</div>
               </a>
             </div>
             <div class="col">
               <div class="row">&nbsp;</div>
-              <a class="more_btn" href="2.html">
+              <a class="more_btn" href="2">
                 <div class="row">소목장세미 혜미</div>
               </a>
-              <a class="more_btn" href="6.html">
+              <a class="more_btn" href="6">
                 <div class="row">포근반짝 수미와 진영</div>
               </a>
             </div>
             <div class="col">
               <div class="row">&nbsp;</div>
-              <a class="more_btn" href="3.html">
+              <a class="more_btn" href="3">
                 <div class="row">오드 스튜디오 서울 주혜</div>
               </a>
-              <a class="more_btn" href="4.html">
+              <a class="more_btn" href="4">
                 <div class="row">바이부 경민</div>
               </a>
             </div>
