--- a/3.html
+++ b/3.html
@@ -22,12 +22,12 @@
       </a>
     </div>
     <div class="nav">
-      <div class="nav_about">
+      <!-- <div class="nav_about">
         About Us
       </div>
       <div class="nav_interview">
         Interviews
-      </div>
+      </div> -->
       <!-- <div class="nav_menu_btn">
         <img src="assets/images/menu_button_black.png"/>
       </div> -->
@@ -73,8 +73,8 @@
           <div class="title">영감</div>
         </div>
         <div style="padding-top:16px;">
-          대학에서 만난 두 친구와 함께  주혜는 오드 스튜디오 서울을 운영중이다. 2021년 1월에 문을 연 오드 스튜디오 서울는 유튜브에 플레이스트를 업로드하고, 네이버스토어를 통해  휴대폰 액세서리를 제작 판매한다.    유튜브 플레이리스트가 빠른 구독자 증가를 보이며 성장하고 있지만 
-          주혜는 브랜드 운영이 아닌 다른 진로를 탐색 중이다. 인터뷰를 하면서 처음엔 성장하고 있는 브랜드를 두고 새로운 진로를 탐색한다는 점이 의아했다. 왜 돈 버는 수단으로 가져가지 않느냐, 직업으로 가져갈 생각은 없는가에 대한 거듭된 의문에 주혜는 취향과 밀접한 이 일을 대하는 명확한 생각과 태도로 답했다. 그리고 다른 누구도 아닌 스스로를 위한 활동이라는 점에서 주혜는 오드 스튜디오 서울이 자신의 취향을 공유하고 자존감을 지켜주는 창구라고 말했다. 
+          대학에서 만난 두 친구와 함께  주혜는 오드스튜디오서울을 운영중이다. 2021년 1월에 문을 연 오드스튜디오서울는 유튜브에 플레이스트를 업로드하고, 네이버스토어를 통해  휴대폰 액세서리를 제작 판매한다.    유튜브 플레이리스트가 빠른 구독자 증가를 보이며 성장하고 있지만 
+          주혜는 브랜드 운영이 아닌 다른 진로를 탐색 중이다. 인터뷰를 하면서 처음엔 성장하고 있는 브랜드를 두고 새로운 진로를 탐색한다는 점이 의아했다. 왜 돈 버는 수단으로 가져가지 않느냐, 직업으로 가져갈 생각은 없는가에 대한 거듭된 의문에 주혜는 취향과 밀접한 이 일을 대하는 명확한 생각과 태도로 답했다. 그리고 다른 누구도 아닌 스스로를 위한 활동이라는 점에서 주혜는 오드스튜디오서울이 자신의 취향을 공유하고 자존감을 지켜주는 창구라고 말했다. 
         </div>
       </div>
     </div>
@@ -88,7 +88,7 @@
       <div class="right noborder odd">
           <img src="./assets/images/page3_img2.png" alt="" style="margin: 0 0 40px 0;">
         <div class="interview_q p3">
-          오드 스튜디오 서울을 세 분이서 함께 운영하시죠. 어떤 경험에서 ‘우리가 비슷한 취향을 갖고 있으니까 같이 일해보자.’라고 결정하게 되었는지 궁금해요.
+          오드스튜디오서울을 세 분이서 함께 운영하시죠. 어떤 경험에서 ‘우리가 비슷한 취향을 갖고 있으니까 같이 일해보자.’라고 결정하게 되었는지 궁금해요.
         </div>
         <div class="interview_a p3">
           대학교 동기인 친구와는 1학년 때부터 함께 프로젝트를 많이 했어요. 학교 주변 공간 큐레이팅, 독립 출판물, 그리고 교환학생도 같은 시기에 다녀왔어요. 제일 친한 친구이자 비슷한 게 많은 친구예요. 거기에 친한 후배도 같이 만나서 전시도 다니고 하면서 셋이서 친해졌고요. 
@@ -215,19 +215,15 @@
             <img src="./assets/images/page3_img7.png" alt="" style="width:100%;margin: 0;">
           </div>
 
-          <div class="right noborder">
+          <div class="right noborder" style="display: flex;justify-content: flex-end;flex-direction: column;">
             <div class="interview_title anchor p3">
-                <br/><br/>
-                <br/><br/>
-                <br/><br/>
-
                 영감
                 <br/>
               </div>
               <div class="interview_q p3">
                 영감은 어디서 받으시나요? 노래 선곡뿐 아니라 섬네일에 대한 칭찬도 댓글에 가득하더라고요.
               </div>
-              <div class="interview_a p3">
+              <div class="interview_a p3" style="padding:0;">
                 유튜브 같은 경우에는 저희가 찍은 사진들에서 영감을 받아서 플레이리스트를 짜요. 노래는 평소에 많이 듣지만 여러 가지를 듣잖아요. 그래서 ‘플레이리스트 뭘 만들지?’했을 때 너무 추상적인데 사진을 보면 이런 느낌으로 만들어야지 하는 생각이 들어요. 셋이서 각자 찍은 사진들을 모아두는데 앨범을 보다가 “이 사진 너무 좋다.”하면 거기에 어울리는 콘셉트로 만드는 거죠.
                 <br/>
                 그리고 저희는 세 명이다 보니까 돌아가서 해서 그게 너무 다행인 것 같아요. 세 명 취향이 다 비슷하지만 어쨌든 각자 좋아하는 장르가 다르거든요. 나는 이제 더 이상 새로운 게 없다 했는데 다른 친구가 “이거 좋더라!”하면 또 같이 들어보고… 셋이 비슷하지만 또 달라서 다채로운 걸 만들 수 있어요. 혼자였으면 절대 못했을 것 같아요.
@@ -282,7 +278,7 @@
               <div class="col">
                 <div class="row">&nbsp;</div>
                 <a class="more_btn" href="3">
-                  <div class="row">오드 스튜디오 서울 주혜</div>
+                  <div class="row">오드스튜디오서울 주혜</div>
                 </a>
                 <a class="more_btn" href="4">
                   <div class="row">바이부 경민</div>
