--- a/6.html
+++ b/6.html
@@ -22,12 +22,12 @@
       </a>
     </div>
     <div class="nav">
-      <div class="nav_about">
+      <!-- <div class="nav_about">
         About Us
       </div>
       <div class="nav_interview">
         Interviews
-      </div>
+      </div> -->
       <!-- <div class="nav_menu_btn">
         <img src="assets/images/menu_button_black.png"/>
       </div> -->
@@ -87,7 +87,7 @@
           촬영 스튜디오에서 콘셉트 디렉팅을 하면서  취업을 준비하고 있어요. 포근반짝은 취미로 시작했지만 이걸로 더 유용하게 돈을 벌었으면 좋겠다는 생각이 들어요. 원래는 이렇게까지 본격적으로 될 줄 몰랐는데 진영이가 포토샵도 기깔나게 해주는데 너무 아깝더라고요. 물론 이걸 본업으로 할 수는 없겠지만요.
         </div>
         <div class="interview_q p6">
-          왜 포근반짝을 본업으로 하진 못하시는 걸까요
+            왜 포근반짝을 본업으로 하진 못하시는 걸까요?
         </div>
         <div class="interview_a p6" style="padding-bottom:30px;">
           <span class="bold">수미</span> 주도적으로 하는 일을 잘 못해요. 혼자서 하면 생각이 너무 넘치고요. 포근반짝은 둘이 같이 해서 중화되는 게 있지만. 저는 같이 일하는 걸 좋아하는 것 같아요. 취업을 해야겠다고 생각한 이유도 회사에서 사람들과 같이 일하고 싶은 게 커요. 
@@ -108,10 +108,10 @@
           흥미로운 것 같아요. 저희는 두 분이 단기간에 큰 수익을 낼 수 있도록 운영할 계획이실 거라고 생각했거든요. 근데 두 분 모두 포근반짝을 본업으로 가져갈 계획이 없고, 진영 씨 말씀 들어보면 긴 시간성을 전제하고 운영할 계획이신 가봐요.
         </div>
         <div class="interview_a p6" style="padding-bottom:30px;">
-          <span class="bold">진영</span> 저희가 아직 팔로우도 얼마 안 돼요. 주문도 사실 지인들이 많이 하고 있고 그래서 별거 없지만 그래도 수작업이기 때문에 나름대로 용돈은 되더라고요. 물론 저희 노동비가 포함되지만 아직까진 크게 고려하고 있진 않아요. 원가처럼 돈을 내는 게 아니니까. 매출이 25만 원 쌓였다면 5만 원의 홍보비를 남겨두고 10만 원씩 가지는 식으로 수익을 나눠요. 나름대로 뿌듯하고 쏠쏠하더라고요. 저희는 포근반짝이 계속 잘 됐으면 좋겠다는 생각을 가지고 있는데 그래서 지속적으로 어떻게 제대로 운영할지 계속 이야기하고 있어요.
+          <span class="bold">진영</span> 저희가 아직 팔로우도 얼마 안 돼요. 주문도 사실 지인들이 많이 하고 있고 그래서 별거 없지만 그래도 수작업이기 때문에 나름대로 용돈은 되더라고요. 물론 저희 노동비가 포함되지만 아직까진 크게 고려하고 있진 않아요. 재료비처럼 돈을 내는 게 아니니까. 매출이 25만 원 쌓였다면 5만 원의 홍보비를 남겨두고 10만 원씩 가지는 식으로 수익을 나눠요. 나름대로 뿌듯하고 쏠쏠하더라고요. 저희는 포근반짝이 계속 잘 됐으면 좋겠다는 생각을 가지고 있는데 그래서 지속적으로 어떻게 제대로 운영할지 계속 이야기하고 있어요.
         </div>
         <div class="interview_a p6">
-          저는 뭔가를 시작하면 항상 진심이에요. 솔직하게 말씀드리면 저는 돈을 좋아해요. 진짜 부자가 되고 싶거든요. 사실 제가 회사를 안 다니고 싶은 것도 너무 부자가 되고 싶어서 그런 거예요. 한계가 있잖아요. 요즘 500만원 버는 것도 정말 힘들다잖아요. 근데 저는 그 정도가 아니라 진짜 부자가 되고 싶어요. 콘텐츠는 한 번 터지면 오랫동안 돈을 받잖아요. 포근반짝이 진심으로 잘 되었으면 좋겠지만 터지기 위해서는 꾸준히 해야 하는 것 같아요. 옷과 다르게 저희가 하는 비즈와 뜨개질은 모든 사람들이 좋아하는 제품군은 아니니까요. 그래서 언젠가 터지길 바라는 마음으로 꾸준히 하는 게 중요한 것 같아요. 제가 김칫국 마시는 스타일이라서 한 10년 하면 되지 않을까 생각하고 있습니다.  
+            저는 뭔가를 시작하면 항상 진심이에요. 솔직하게 말씀드리면 저는 돈을 좋아해요. 진짜 부자가 되고 싶거든요. 사실 제가 회사를 안 다니고 싶은 것도 너무 부자가 되고 싶어서 그런 거예요. 한계가 있잖아요. 요즘 500만원 버는 것도 정말 힘들다잖아요. 근데 저는 그 정도가 아니라 진짜 부자가 되고 싶어요. 콘텐츠는 한 번 터지면 오랫동안 돈을 받잖아요. 포근반짝이 진심으로 잘 되었으면 좋겠지만 터지기 위해서는 꾸준히 해야 하는 것 같아요. 옷과 다르게 저희가 하는 비즈와 뜨개질은 모든 사람들이 좋아하는 제품군은 아니니까요. 그래서 언젠가 터지길 바라는 마음으로 꾸준히 하는 게 중요한 것 같아요. 제가 김칫국 마시는 스타일이라서 한 10년 하면 되지 않을까 생각하고 있습니다.
         </div>
       </div>
     </div>
@@ -216,7 +216,7 @@
               <div class="col">
                 <div class="row">&nbsp;</div>
                 <a class="more_btn" href="3">
-                  <div class="row">오드 스튜디오 서울 주혜</div>
+                  <div class="row">오드스튜디오서울 주혜</div>
                 </a>
                 <a class="more_btn" href="4">
                   <div class="row">바이부 경민</div>
