--- a/7.html
+++ b/7.html
@@ -22,12 +22,12 @@
       </a>
     </div>
     <div class="nav">
-      <div class="nav_about">
+      <!-- <div class="nav_about">
         About Us
       </div>
       <div class="nav_interview">
         Interviews
-      </div>
+      </div> -->
       <!-- <div class="nav_menu_btn">
         <img src="assets/images/menu_button_black.png"/>
       </div> -->
@@ -93,7 +93,7 @@
           유튜브는 어떻게 시작하게 되셨어요?
         </div>
         <div class="interview_a p7" style="padding-bottom:30px;">
-          처음에는 남편이 기록용으로 시작했어요. (그런데) 이 집으로 이사 오면서 어차피 장비가 있으니까 나도 한 번 해보자 해서 올렸는데 조회 수나 유입이 많이 늘어났어요. 남편이 “이거는 네가 운영해야 되겠다.”고 해서 제가 하게 됐죠. 
+            처음에는 남편이 기록용으로 시작했어요. 이 집으로 이사 오면서 어차피 장비가 있으니까 '나도 한 번 해보자.'해서 제가 올렸는데 조회 수나 유입이 많이 늘어났어요. 남편이 “이거는 네가 운영해야 되겠다.”고 해서 제가 하게 됐죠.
         </div>
       </div>
 
@@ -101,7 +101,7 @@
         <div class="interview_q p7">
           유튜브를 전업으로 하고 계시나요?
         </div>
-        <div class="interview_q p7">
+        <div class="interview_a p7">
           원래는 IT 회사를 다니다 잠깐 일 쉬고 싶어서 퇴사했어요. 다시 취업하려고 준비하는데 계속 영상 관련 일이 들어왔어요. 그러다 보니 시간이 없더라고요. 취직 생각 잊고 일을 한 지 1년 정도 됐어요. 지금은 영상 외주 받아서 제작하고 촬영하는 일을 하고 있어요. 유튜브가 기반이 되긴 했지만 딱히 스스로 유튜버라고 생각하지는 않아요. 그래서 콘텐츠 크리에이터라고 소개하고 있어요.
         </div>
       </div>
@@ -141,15 +141,15 @@
       </div>
     </div>
   </div>
-    <div class="parallax6"></div>
-    <div class="container">
-      <div class="table" style="">
-        <div class="left full noborder">
-          <div class="interview_title anchor p7" style="padding-top: 125px;;text-align: center;">
-            구독자와 생계 사이
-          </div>
+  <div class="parallax6"></div>
+  <div class="container">
+    <div class="table" style="">
+      <div class="left full noborder">
+        <div class="interview_title anchor p7" style="padding-top: 125px;;text-align: center;">
+          구독자와 생계 사이
         </div>
       </div>
+    </div>
 
     <div class="table" style="padding-top:0;">
       <div class="left noborder full" style="position: relative;">
@@ -219,15 +219,15 @@
           앞서 유튜브는 좀 더 편하게 대하려고 한다고 하셨잖아요. 구독자 수를 엄청 높이고 싶다는 목표가 있지는 않으신 거예요?
         </div>
         <div class="interview_a p7">
-          원래는 그랬는데 지금은 솔직히 말하자면 넷플릭스라든지 디즈니 플러스, 애플 TV 등 이런 게 있으면 요즘 유튜브 잘 안 보게 되더라고요. 근데 저만 그런 게 아니고 왠지 남들도 그럴 것 같은 거예요. 그래서 ‘새로운 구독자 유입은 조금 어려울 것 같다’, ‘유튜브가 언제까지 이렇게 잘 되지는 않겠구나.’라는 생각이 계속 들어서 ‘이제 밥줄 빨리 찾아야겠다.’이런 생각을 해요.
+            원래는 그랬는데 지금은 솔직히 말하자면 넷플릭스라든지 디즈니 플러스, 애플 TV 등 이런 게 있으면 요즘 유튜브 잘 안 보게 되더라고요. 근데 저만 그런 게 아니고 왠지 남들도 그럴 것 같은 거예요. 그래서 ‘새로운 구독자 유입은 조금 어려울 것 같다.’, ‘유튜브가 언제까지 이렇게 잘 되지는 않겠구나.’라는 생각이 계속 들어서 ‘이제 밥줄 빨리 찾아야겠다.’이런 생각을 해요.
         </div>
         <div class="interview_q p7">
           확실히 이런 변화의 흐름이나 사람들의 니즈가 뭔지 빠르게 파악하시는 것 같아요.
         </div>
         
         <div class="interview_a p7">
-          왜냐하면 이게 당장 생계의 문제라 늘 변화의 흐름을 예민하게 봐야 돼요. 전에 틱톡 열심히 하다가 보니 이제 사람들이 안 하더라고요. 그래서 빨리 발 빼고. 괜히 잡고 늘어지는 건 시간 낭비니까요. 원래 블로그를 엄청 열심히 했는데 유튜브하면서 병행하니까 하나도 제대로 못하겠더라고요. 그래서 블로그는 쉬던 상태였어요. 그런데 요즘 젊은 친구들이 블로그로 많이 넘어간다는 걸 보고 다시 블로그 하려고 옛날 글부터 다시 정리하고 있어요.
-          <br><br>친구들이 “나 요즘에 유튜브 잘 안 하고 넷플릭스 <오징어 게임> 봐” 이런 식으로 이야기하면 그 속에서 파악하거나 동생을 통해서 동생 친구들, 회사 동료들에게 물어보기도 하고 계속 뉴스 보면서 확인해요.
+            왜냐하면 이게 당장 생계의 문제라 늘 변화의 흐름을 예민하게 봐야 돼요. 전에 틱톡 열심히 하다가 보니 이제 사람들이 안 하더라고요. 그래서 빨리 발 빼고. 괜히 잡고 늘어지는 건 시간 낭비니까요. 원래 블로그를 엄청 열심히 했는데 유튜브하면서 병행하니까 하나도 제대로 못하겠더라고요. 그래서 블로그는 쉬던 상태였어요. 그런데 요즘 젊은 친구들이 블로그로 많이 넘어간다는 걸 보고 다시 블로그 하려고 옛날 글부터 다시 정리하고 있어요.
+          <br><br>친구들이 “나 요즘에 유튜브 잘 안 하고 넷플릭스 <오징어 게임> 봐.” 이런 식으로 이야기하면 그 속에서 파악하거나 동생을 통해서 동생 친구들, 회사 동료들에게 물어보기도 하고 계속 뉴스 보면서 확인해요.
         </div>
       </div>
       
@@ -248,7 +248,7 @@
       <div class="left noborder full" style="position: relative;">
         <img src="./assets/images/page7_img5.png" style="width: 635px;float: left;margin: 0 30px 40px">
         <div class="interview_q p7">
-          얼굴이 드러나는 작업이잖아요. 예를 들어 저희도 마찬가지죠. 저희는 다정 님의 유튜브를 보고 인터뷰를 하지만 저희 얼굴은 오늘 처음 보신 거죠. 다른 작업을 의뢰받을 때나 일상에서 겪게 되는 어려움들이 있는지 궁금했어요. 얼굴도 집도 노출되어 있는 거잖아요. 
+            얼굴이 드러나는 작업이잖아요. 예를 들어 저희는 다정 님의 유튜브를 보고 인터뷰를 하지만 저희 얼굴은 오늘 처음 보신 거죠. 다른 작업을 의뢰받을 때나 일상에서 겪게 되는 어려움들이 있는지 궁금했어요. 얼굴도 집도 노출되어 있는 거잖아요.
         </div>
         <div class="interview_a p7">
           딱히 그런 건 없어요. 예전에 남편이랑 코엑스몰에 갔을 때 구독자가 알아보신 거예요. 그래서 신기했어요. 
@@ -318,7 +318,7 @@
               <div class="col">
                 <div class="row">&nbsp;</div>
                 <a class="more_btn" href="3">
-                  <div class="row">오드 스튜디오 서울 주혜</div>
+                  <div class="row">오드스튜디오서울 주혜</div>
                 </a>
                 <a class="more_btn" href="4">
                   <div class="row">바이부 경민</div>
