--- a/4.html
+++ b/4.html
@@ -22,12 +22,12 @@
       </a>
     </div>
     <div class="nav">
-      <div class="nav_about">
+      <!-- <div class="nav_about">
         About Us
       </div>
       <div class="nav_interview">
         Interviews
-      </div>
+      </div> -->
       <!-- <div class="nav_menu_btn">
         <img src="assets/images/menu_button_black.png"/>
       </div> -->
@@ -64,7 +64,7 @@
           <div class="title">인스타그램 속 여성의 몸과 스타일</div>
         </div>
         <div style="padding-top:16px;">
-          경민의 바이부라는 이름의 인스타그램 계정으로 자신의 취향이 반영된 일상을 올린다.종종 들어오는 브랜드 제품 리뷰 제의를 받아 다양한 아이템을 써본 후 자신의 방식으로 사진과 후기를 올린다. 소셜미디어는 오늘날  가장 영향력 있는 공간이지만 모두가  적극적으로 활동하진 않는다. 패션, 뷰티 분야에 관심이 많은 소비자이자 패션 잡화  제작자이기도 한 경민에게 인스타그램에서  자신의 취향과 무드를 보여주는 건 흥미롭고 중요한 문제이다. 대학교 때 “너 같은 사람은 꼭 인스타그램 해야한다“ 라는 주변의 권유에서 시작하게 된 인스타그램. 그 공간에서 경민은 어떻게 본인의 일상을 보여주고 있을까?
+          경민의 바이부라는 이름의 인스타그램 계정으로 자신의 취향이 반영된 일상을 올린다.종종 들어오는 브랜드 제품 리뷰 제의를 받아 다양한 아이템을 써본 후 자신의 방식으로 사진과 후기를 올린다. 소셜미디어는 오늘날  가장 영향력 있는 공간이지만 모두가  적극적으로 활동하진 않는다. 패션, 뷰티 분야에 관심이 많은 소비자이자 패션 잡화  제작자이기도 한 경민에게 인스타그램에서  자신의 취향과 무드를 보여주는 건 흥미롭고 중요한 문제이다. 대학교 때 “너 같은 사람은 꼭 인스타그램 해야한다” 라는 주변의 권유에서 시작하게 된 인스타그램. 그 공간에서 경민은 어떻게 본인의 일상을 보여주고 있을까?
           서촌의 한 카페에서 만난 우리는 일상을 전시하는 일과 보여지는 신체에 대해서 묻고 답하는 시간을 가졌다.            
         </div>
       </div>
@@ -79,13 +79,13 @@
           만나 뵙기 전에 경민 님의 인스타그램을 살펴보았는데 첫 게시물이 2018년이더라고요. 2018년부터 시작하신 거예요? 어떤 계기로 하시게 되었나요?
         </div>
         <div class="interview_a p4">
-          대학교 1학년 때는 인스타그램을 안 했었고 그때는 주변에서도 페이스북을 더 많이 했던 것 같아요. 근데 제 친구 중 한 명이 “너 진짜 인스타그램 왜 안 하냐” “너는 꼭 해야 된다”고 계속 말하는 거예요. 처음에는 해시태그나 이런 것도 어려워 보여서 망설였는데 시작하니까 정말 재밌고 지금은 제가 가장 많이 하는 SNS가 되었죠. 
+            대학교 1학년 때는 인스타그램을 안 했었고 주변에서도 페이스북을 더 많이 했던 것 같아요. 근데 제 친구 중 한 명이 “너 진짜 인스타그램 왜 안 하냐”, “너는 꼭 해야 된다”고 계속 말하는 거예요. 처음에는 해시태그나 이런 것도 어려워 보여서 망설였는데 시작하니까 정말 재밌고 지금은 제가 가장 많이 하는 SNS가 되었죠.
         </div>
         <div class="interview_q p4" style="padding-top: 50px;">
           어떤 점이 재미있었나요? 
         </div>
         <div class="interview_a p4">
-          사람들이 일기를 쓰거나 블로그를 쓰는 것처럼 저는 그걸 그냥 인스타그램으로 남겨요. 그래서 사실 남이 보든 말든 상관없고 그냥 내가 나만의 무드를 담은 하나의 그냥 공간이라고 생각해요. 내 피드 그러니까 말 그대로 이건 내 거, 내 공간, 내가 꾸민 것들 약간 이런 느낌인 것 같아요.
+            사람들이 일기를 쓰거나 블로그를 쓰는 것처럼 저는 그걸 그냥 인스타그램으로 남겨요. 그래서 사실 남이 보든 말든 상관없고 그냥 내가 나만의 무드를 담는 하나의 공간이라고 생각해요. 내 피드 그러니까 말 그대로 이건 내 거, 내 공간, 내가 꾸민 것들 약간 이런 느낌인 것 같아요.
         </div>
 
       </div>
@@ -106,18 +106,18 @@
           인스타그램 운영하시면서 모든 일상을 공유하는 편이신가요? 
         </div>
         <div class="interview_a p4">
-          다 올리면 끝이 없으니까 소소하게 바로바로 올리는 건 스토리를 많이 활용해요. 스토리는 Q&A, 설문 등 사람들과 소통할 수 있는 방법도 다양하거든요. 조금 더 일상적인 것들을 편하게 담는 것 같아요. 반면 피드는 좀 제 취향의 것들을 아카이빙 하는 느낌이에요. 주기적으로 지난 게시물들을 둘러보고 관리하기도 해요. 그리고 게시물은 피드에 남으니까 제 취향에 맞게 색보정을 하는 편이에요. 색보정에도 제 취향이 있거든요.
+            다 올리면 끝이 없으니까 소소하게 바로바로 올리는 건 스토리를 많이 활용해요. 스토리는 Q&A, 설문 등 기능들이 다양해서 사람들과 소통하거나 제 일상을 더 많이 담게 되는 것 같아요. 반면 피드는 제 취향의 것들을 아카이빙 하는 느낌이에요. 그래서 주기적으로 지난 게시물들을 둘러보고 관리하기도 해요. 게시물은 피드에 남으니까 제 취향에 맞게 색보정을 하는 편이에요. 색보정에도 제 취향이 있거든요. 
         </div>
         <div class="interview_q p4" style="padding-top: 50px;">
           그러면 인스타그램은 경민 씨의 모습을 온전히 담아내는 공간일까요 아니면 보여주고 싶은 모습을 보여주는 공간일까요?
         </div>
         <div class="interview_a p4">
-          반반인 것 같아요. 아무래도 비공개 계정도 아니고 공개 계정으로 해놓기는 하니까 불특정 다수에게 다 노출될 수 있잖아요. 제 성격과 같아요. 사람을 워낙 좋아하고 처음 본 사람과도 이야기 엄청 잘 하는데 정말 깊은 어떤 모습은 편하고 의지하는 특정 몇 명에게 보여주는 스타일이다 보니까 인스타그램도 똑같은 것 같아요. 뭔가 일정 수준 이하는 제가 혼자 생각하고 올리지 않아요. 
+            반반인 것 같아요. 아무래도 비공개 계정도 아니고 공개 계정으로 해놓기는 하니까 불특정 다수에게 다 노출될 수 있잖아요. 제 성격이랑 비슷해요. 사람을 워낙 좋아하고 처음 본 사람과도 이야기 엄청 잘 하는데 정말 깊은 어떤 모습은 편하고 의지하는 특정 몇 명에게만 보여주는 스타일이다 보니까 인스타그램도 똑같은 것 같아요. 뭔가 일정 수준 이하는 제가 혼자 생각하고 올리지 않아요.
         </div>
       </div>
     </div>
 
-    <div class="table heart" style="padding-top:100px;">
+    <div class="table heart" style="padding-top:100px;overflow:hidden;">
       <img class="heart_p4" src="./assets/images/page4_heart1.png" alt="">
       <div class="left noborder odd2">
         <div class="interview_title anchor p4">
@@ -129,7 +129,7 @@
           피드를 보면 제품 리뷰나 홍보에도 적극적으로 참여하고 계시더라고요. 홍보 요청은 보통 DM으로 오나요?
         </div>
         <div class="interview_a p4">
-          연락이 오는 경우도 있고 아니면 브랜드에서 리뷰 체험단을 모집하는 경우도 있어요. 그래서 뷰티 브랜드에 제가 직접 신청하기도 해요. 신청하면 브랜드에서 제 인스타를 확인하고 선정되면 제품을 무료로 보내주는 대신에 리뷰를 기간 내에 어떻게 써달라고 요청이 오죠. 주로 먼저 연락이 오는 건 오히려 해외 브랜드더라고요. 작은 해외 주얼리 브랜드에서 협찬받은 적 있는데 해외 배송이라 그랬는지 제품 상태가 좋지 않았어요. 그 경험이 좋지는 않아서 이후로는 그렇게는 안 하고 있어요.
+            연락이 오는 경우도 있고 아니면 브랜드에서 리뷰 체험단을 모집하는 경우도 있어요. 그래서 뷰티 브랜드에 제가 직접 신청하기도 해요. 신청하면 브랜드에서 제 인스타그램을 확인하고 선정되면 제품을 무료로 보내주는 대신에 리뷰를 기간 내에 어떻게 써달라고 요청이 오죠.
         </div>
         <div class="interview_q p4" style="padding-top: 50px;">
           피드가 나의 취향을 보여주는 아카이브지만 제품 협찬이나 홍보가 이뤄질 때는 긴장이 생길 것 같거든요. 예를 들어 리뷰 체험단을 신청하실 때는 경민 씨의 인스타그램이 업체 마케팅 담당자에게 평가의 대상이 될 것이고, 또 경민 씨 인스타그램을 보고 제품 홍보를 요청하는 경우에는 분명 경민 씨의 인스타그램의 특정 지점을 보고 연락을 하는 거잖아요. 그럼 경험이 쌓이다 보면 인스타그램을 이런 식으로 운영하면 광고가 더 오지 않을까? 등의 고민이 생기시진 않나요? 
@@ -162,7 +162,7 @@
             이런 활동을 적극적으로 더 하실 계획도 있으신가요? 제품 협찬뿐 아니라 광고까지도?  
           </div>
           <div class="interview_a p4">
-            인플루언서가 되면 좋죠. 그걸로 돈을 벌고 그게 업이 되는 거니까요.
+              좋은 제품이나 저의 경험을 나누는 일이라면 더 활발하게 하고 싶어요.
           </div>
         </div>  
       </div>
@@ -254,7 +254,7 @@
               <div class="col">
                 <div class="row">&nbsp;</div>
                 <a class="more_btn" href="3">
-                  <div class="row">오드 스튜디오 서울 주혜</div>
+                  <div class="row">오드스튜디오서울 주혜</div>
                 </a>
                 <a class="more_btn" href="4">
                   <div class="row">바이부 경민</div>
