--- a/5.html
+++ b/5.html
@@ -22,12 +22,12 @@
       </a>
     </div>
     <div class="nav">
-      <div class="nav_about">
+      <!-- <div class="nav_about">
         About Us
       </div>
       <div class="nav_interview">
         Interviews
-      </div>
+      </div> -->
       <!-- <div class="nav_menu_btn">
         <img src="assets/images/menu_button_black.png"/>
       </div> -->
@@ -84,15 +84,6 @@
         <div class="interview_a p5">
           제가 어렸을 때 나이스한 사람이 되고 싶다는 막연한 생각을 한 적이 있어요.  친구들한테 그 이야기를 하니까 친구들이 “너 나이스한데? 너 나이스해.”하면서 애칭처럼 ‘나이스 킴’이라고 불러줬었어요. 그래픽 스튜디오 이름을 지을 때 당시 한창 ‘프레스’이름을 가진 스튜디오들이 많아서 나이스프레스라고 지었고 숍 이름을 지을때는 나이스프레스와 다르게 독립적으로 지으려고 많이 생각했었는데 딱히 좋은 이름이 떠오르지 않더라고요. 계속 미루다가는 아무것도 못하겠다 싶어서 그냥 나이스숍으로 정했어요. 
         </div>
-        <div class="interview_q p5" style="margin-top:100px;">
-          나이스 숍을 운영하시게 된 배경이 궁금해요. 
-        </div>
-        <div class="interview_a p5">
-          제 주변에 원체 좋은 여성 창작자 친구들이 많았어요. 친구들도 소개하고 친구들의 작업도 선보일 수 있고 판매도 하는 그런 공간이 됐으면 좋겠다고 생각해서 시작하게 된 거였어요. 그리고 초기에는 저를 홍보할 수 있는 수단으로도 생각했었어요. 이 브랜드를 만들고 꾸려나감으로써 스스로를 브랜딩을 해나가는 거잖아요. 포트폴리오가 하나 생기는 거니까. 그걸 가지고 다른 일을 외부에서도 할 수 있지 않을까 이런 생각도 했었던 것 같고. 근데 저 스스로를 홍보하는 게 쉽지 않더라고요. 저를 드러내고 자꾸 쇼잉하고 막 어필하는 게 너무 어려운 거예요. 그냥 있는 그대로만 말해도 되는데 잘 풀어내지 못했었어요. 그래서 되게 혼란을 많이 겪었어요.
-        </div>
-        <div class="interview_a p5">
-          근데 나이스숍 일은 장사잖아요. 돈이 오가는 문제라 정신이 바짝 들더라고요. 이 일을 하면서 일에 대한 개념을 아예 처음부터 다시 세웠어요. 일을 접근하는 태도, 일을 하는 저에 대한 태도, 그리고 같이 일을 하는 사람에 대한 태도도 바뀌었어요. 사실 나이스숍이 돈이 많이 되고 안 되고 이런 걸 떠나서 개인적으로 저의 성장에 있어서 엄청 의미가 커요. 
-        </div>
       </div>
       <div class="right noborder">
         <div class="interview_q p5">
@@ -101,7 +92,24 @@
         <div class="interview_a p5">
           브랜딩 차원에서 나중에 만들어진 문장이지만 관련이 있기는 해요. 나이스라고 하면 유쾌하고 청량한 느낌이 있잖아요. 쿨하고 좋은 이미지 그 자체였으면 좋겠다 싶었어요. 입점 상품을 개인적인 취향으로 셀렉하지만 그런 의미들이 많이 반영이 됐으면 좋겠기도 했고.
         </div>
-        <img src="./assets/images/page5_img3.png" alt="" style="margin: 200px 0 0 0;">
+      </div>
+    </div>
+
+    <div class="table" style="margin-top:100px;">
+      <div class="left noborder">
+        <div class="interview_q p5">
+            나이스숍을 운영하시게 된 배경이 궁금해요.
+        </div>
+        <div class="interview_a p5">
+            제 주변에 원체 좋은 여성 창작자 친구들이 많았어요. 친구들도 소개하고 친구들의 작업도 선보일 수 있고 판매도 하는 그런 공간이 됐으면 좋겠다고 생각해서 시작하게 된 거였어요. 그리고 초기에는 저를 홍보할 수 있는 수단으로도 생각했었어요. 이 브랜드를 만들고 꾸려나감으로써 스스로를 브랜딩 해나가는 거잖아요. 포트폴리오가 하나 생기는 거니까. 그걸 가지고 다른 일을 외부에서도 할 수 있지 않을까 이런 생각도 했었던 것 같고. 근데 저 스스로를 홍보하는 게 쉽지 않더라고요. 저를 드러내고 자꾸 쇼잉하고 막 어필하는 게 너무 어려운 거예요. 그냥 있는 그대로만 말해도 되는데 잘 풀어내지 못했었어요. 그래서 되게 혼란을 많이 겪었어요.
+        </div>
+        <div class="interview_a p5">
+            근데 나이스숍 일은 장사잖아요. 돈이 오가는 문제라 정신이 바짝 들더라고요. 이 일을 하면서 일에 대한 개념을 아예 처음부터 다시 세웠어요. 일을 접근하는 태도, 일하는 저에 대한 태도, 그리고 같이 일을 하는 사람에 대한 태도도 바뀌었어요. 사실 나이스숍이 돈이 많이 되고 안 되고 이런 걸 떠나서 개인적으로 저의 성장에 있어서 엄청 의미가 커요.
+        </div>
+      </div>
+
+      <div class="right noborder">
+        <img src="./assets/images/page5_img3.png" style="margin:0;">
       </div>
     </div>
 
@@ -118,7 +126,7 @@
           나이스숍은 “여성이 만든 제품을 큐레이션 합니다”라고 인스타에 소개되어 있죠. 
         </div>
         <div class="interview_a p5">
-          네, 여성 창작자들이 만든 제품을 소개하는 것을 기본 원칙으로 하고 퀄리티나 작업의 지속 가능성 등을 주요하게 보고 있어요. 운영 초창기에는 무언가를 쌓아 나가기 시작하는 분들을 제가 발견해서 제품을 들여오기도 했어요. 그런데 고객의 컴플레인을 받고 본인의 작업에 자신 없어져서 자연스럽게 작업을 놓는 분들이 계시더라고요. 혼자 하는 여성 작업자들 중에 진짜 잘하는 분들이 있는데 연락이 뚝뚝 끊기는 경우가 있어요. 근데 저는 그게 개인의 멘탈 이슈는 아닌 것 같아요. 한국에서 여성으로 태어나서 자라면서 얻기 쉬운 질병 같은 것들이 있잖아요. 물론 아예 없는 분들도 있어요. 차별 느끼지 못하고 자신감도 있고 엄청 커리어에 대한 자부심도 있고 그래서 쭉쭉 잘나가요. 작업이 좋다면요. 반면에 주춤하시는 분들은 제가 거래처로서 최대한 힘을 얻을 수 있는 멘트들을 할 수는 있지만 어떻게 받아들이느냐는 그분들 몫이니까 아무래도 한계가 있죠.
+            네, 여성 창작자들이 만든 제품을 소개하는 것을 기본 원칙으로 하고 퀄리티나 작업의 지속 가능성 등을 주요하게 보고 있어요. 운영 초창기에는 무언가를 쌓아 나가기 시작하는 분들을 제가 발견해서 제품을 들여오기도 했어요. 그런데 자연스럽게 작업을 놓는 분들이 계시더라고요. 혼자 하는 여성 작업자들 중에 진짜 잘하는 분들이 있는데 연락이 끊기는 경우가 있어요. 근데 저는 그게 개인의 멘탈 이슈는 아닌 것 같아요. 한국에서 여성으로 태어나고 자라면서 받기 쉬운 스트레스나 사회적 압박 같은 것들이 있잖아요. 물론 아예 없는 분들도 있어요. 자신감이 높고 커리어에 대한 자부심도 있는 분들은 쭉쭉 잘나가요. 작업이 좋다면요. 반면에 주춤하시는 분들은 제가 거래처로서 최대한 힘내실 수 있도록 하는 멘트들을 할 수는 있지만 어떻게 받아들이느냐는 그분들 몫이니까 아무래도 한계가 있죠.
         </div>
         <div class="interview_q p5">
           나이스숍을 브랜딩 하는 과정에서 본인을 드러내는 게 어려웠다고 말씀하셨잖아요. 그것 또한 여성이라는 위치와 연결되는 지점이 있었을까요?
@@ -139,7 +147,8 @@
           은하 님은 숍 운영자인 동시에 창작자이기도 하시잖아요. 디자이너로서 활동할 때와 나이스숍을 통해 창작자들을 소개하면서 달라진 점이 있나요? 
         </div>
         <div class="interview_a p5">
-          네, 여성 창작자들이 만든 제품을 소개하는 것을 기본 원칙으로 하고 퀄리티나 작업의 지속 가능성 등을 주요하게 보고 있어요. 운영 초창기에는 무언가를 쌓아 나가기 시작하는 분들을 제가 발견해서 제품을 들여오기도 했어요. 그런데 고객의 컴플레인을 받고 본인의 작업에 자신 없어져서 자연스럽게 작업을 놓는 분들이 계시더라고요. 혼자 하는 여성 작업자들 중에 진짜 잘하는 분들이 있는데 연락이 뚝뚝 끊기는 경우가 있어요. 근데 저는 그게 개인의 멘탈 이슈는 아닌 것 같아요. 한국에서 여성으로 태어나서 자라면서 얻기 쉬운 질병 같은 것들이 있잖아요. 물론 아예 없는 분들도 있어요. 차별 느끼지 못하고 자신감도 있고 엄청 커리어에 대한 자부심도 있고 그래서 쭉쭉 잘나가요. 작업이 좋다면요. 반면에 주춤하시는 분들은 제가 거래처로서 최대한 힘을 얻을 수 있는 멘트들을 할 수는 있지만 어떻게 받아들이느냐는 그분들 몫이니까 아무래도 한계가 있죠.
+            과거의 저는 그래픽 디자이너로서의 이미지에 대해 고민하곤 했어요. 남자 디자이너인 제 친구는 옷에 신경을 하나도 안 써요. 맨날 똑같은 츄리닝만 입고 다녀요. 그와 무관하게 일은 들어오더라고요. 본인의 셀카를 막 올려도 그건 그 친구의 사생활인 거고 디자인만 잘하면 그만이라고 여겨지죠. 하지만 여성 창작자들의 경우 인스타그램에 올리는 셀카에도 신경 쓰게 되고 옷도 잘 입어야 해요. 인쇄소를 갈 때에도 “어려보이는데 몇 살이냐.” 등의 질문을 받으니까… ‘전문적인 이미지가 뭐지?’하고 계속 고민했던 것 같아요. 거기서 드는 피로감도 있잖아요.<br>
+            나이스숍을 운영하면서 더 많은 여성 창작자들을 만나게 되고 이야기 나눌 수 있었어요. 그러면서 그들의 이야기를 모아서 발간해야겠다고 생각했고 인터뷰를 진행했어요. 저도 여성 창작자다 보니 인터뷰 준비할 때 질문들이 저한테서 시작된 질문들이었어요. 그래서 제 경험을 담아 처음에는 여자 혼자 일하는 게 힘들지 않냐, 혼자 작업실을 쓰는데 혹시 안 좋은 일이 있었던 적은 없었냐는 식의 질문도 하긴 했어요. 그런데 그게 사실 모두에게 유효하지 않거든요. 모두에게 유효하지 않다고 해서 또 없는 일은 아니긴 하지만 사실은 굳이 모두에게 있을 필요도 없는 일이잖아요. 이렇게 답변들을 들으면서 다름을 인정하기도 하고 생각도 안 해본 것들도 함께 생각해 보면서 개인적으로 성장했죠.
         </div>
       </div>
     </div>
@@ -169,7 +178,7 @@
           상품 셀렉에 있어 예민함은 무엇인가요?
         </div>
         <div class="interview_a p5">
-          제품의 완성도도 중요하지만 결국은 저의 경험치인 것 같아요. 시간과 여유가 없으면 ‘이것도 괜찮은데 저것도 괜찮은데’ 하면서 막 마음이 흔들리고 다 괜찮아 보여요. 초반에는 제 타입이 아니어도 ‘누군가는 좋아하지 않을까?’하면서 가져오기도 하고 그랬어요. 그런데 정말 좋은 작업을 만나면 ‘이런 애들만 와야 되는데…’ 이런 생각을 하죠.높은 기준점을 유지하려면 결국 계속 비교하면서 더 나은 걸 찾아야 하니까 시간이 많이 들어요. 만약에 당장 문을 열어야 되는데 매장이 텅텅 비어 있으면 안 되잖아요. 쫓겨서 여유가 없어지면 기준점이 흔들리는 거죠. 그런 상황을 최대한 만들지 않아야 나이스숍을 알고 여기에 있는 여성 창작자들의 제품을 사려는 분들에게도 면이 서죠.
+            제품의 완성도도 중요하지만 결국은 저의 경험치인 것 같아요. 시간과 여유가 없으면 ‘이것도 괜찮은데, 저것도 괜찮은데.’하면서 막 마음이 흔들리고 다 괜찮아 보여요. 초반에는 제 타입이 아니어도 ‘누군가는 좋아하지 않을까?’하면서 가져오기도 하고 그랬어요. 그런데 정말 좋은 작업을 만나면 ‘이런 애들만 와야 되는데…’ 이런 생각을 하죠. 높은 기준점을 유지하려면 결국 계속 비교하면서 더 나은 걸 찾아야 하니까 시간이 많이 들어요. 만약에 당장 문을 열어야 되는데 매장이 텅텅 비어 있으면 안 되잖아요. 쫓겨서 여유가 없어지면 기준점이 흔들리는 거죠. 그런 상황을 최대한 만들지 않아야 나이스숍을 알고 여기에 있는 여성 창작자들의 제품을 사려는 분들에게도 면이 서죠.
         </div>
         <div class="interview_q p5" style="position:relative;">
             <div class="heart_left_p5"></div>
@@ -177,7 +186,7 @@
           최근에 여성들이 미학적인 영역, 예를 들어 소품 등에 돈을 쓰기보다는, 자기 개발이나 주식과 같은 영역에 돈을 더 투자해야 한다는 이야기들이 있었잖아요. 앞서 말씀하신 고민 연장 선에서 이런 부분도 고민되셨을 것 같아요.  
         </div>
         <div class="interview_a p5">
-          제품의 완성도도 중요하지만 결국은 저의 경험치인 것 같아요. 시간과 여유가 없으면 ‘이것도 괜찮은데 저것도 괜찮은데’ 하면서 막 마음이 흔들리고 다 괜찮아 보여요. 초반에는 제 타입이 아니어도 ‘누군가는 좋아하지 않을까?’하면서 가져오기도 하고 그랬어요. 그런데 정말 좋은 작업을 만나면 ‘이런 애들만 와야 되는데…’ 이런 생각을 하죠.높은 기준점을 유지하려면 결국 계속 비교하면서 더 나은 걸 찾아야 하니까 시간이 많이 들어요. 만약에 당장 문을 열어야 되는데 매장이 텅텅 비어 있으면 안 되잖아요. 쫓겨서 여유가 없어지면 기준점이 흔들리는 거죠. 그런 상황을 최대한 만들지 않아야 나이스숍을 알고 여기에 있는 여성 창작자들의 제품을 사려는 분들에게도 면이 서죠.
+            제가 페미니즘을 옹호하고 페미니스트인 이유도 결국은 아름다운 사회를 위한 거라고 생각해요. 시각적인 아름다움과 사회적인 아름다움이 그렇게 멀리 있는 거는 아닌 것 같아요. 진짜 아름다운 게 뭐냐고 질문을 하면 그냥 시각적으로 단지 예쁜 게 다는 아닌 것 같아요. 아름다움은 광범위하니까 계속 찾을 수 있는 거잖아요. 이건 이것만의 아름다움이 있고 저건 저것만의 아름다움이 있고. 사실 가장 중요한 건 그 아름다움을 찾을 수 있는 자기의 시야거든요. 시각적인 아름다움을 가진 물건이 아니라 어떻게 생긴 물건이든지 간에 이 물건이 제대로 만들어져 있다면 그걸 알아볼 수 있는 눈이 진짜 제일 중요한 것 같아요. 여성 본인이 아름다워질 필요는 없어요. 주위의 아름다움을 발견할 수 있는 사람이 아름다운 사회를 만들어 나가는 거죠.
         </div>
         
       </div>
@@ -235,7 +244,7 @@
               <div class="col">
                 <div class="row">&nbsp;</div>
                 <a class="more_btn" href="3">
-                  <div class="row">오드 스튜디오 서울 주혜</div>
+                  <div class="row">오드스튜디오서울 주혜</div>
                 </a>
                 <a class="more_btn" href="4">
                   <div class="row">바이부 경민</div>
