--- a/7.html
+++ b/7.html
@@ -245,7 +245,7 @@
     </div>
 
     <div class="table"><div class="table" style="padding-top:0;">
-      <div class="left noborder full" style="position: relative;">
+      <div class="left noborder full" style="position: relative;width:100%;">
         <img src="./assets/images/page7_img5.png" style="width: 635px;float: left;margin: 0 30px 40px">
         <div class="interview_q p7">
             얼굴이 드러나는 작업이잖아요. 예를 들어 저희는 다정 님의 유튜브를 보고 인터뷰를 하지만 저희 얼굴은 오늘 처음 보신 거죠. 다른 작업을 의뢰받을 때나 일상에서 겪게 되는 어려움들이 있는지 궁금했어요. 얼굴도 집도 노출되어 있는 거잖아요.
