--- a/index.html
+++ b/index.html
@@ -213,8 +213,7 @@
           <a class="nav_menu_btn" href="./5">
             <div class="item item2">
               <div class="subject">
-                아름다운 취향과<br/>
-                여성 사이의 긴장
+                더 나은 선택을 위한 취향
               </div>
               <div class="hidden">
                 여성 본인이 아름다워질 필요는 없어요.
@@ -418,8 +417,8 @@
             </div>
             <div class="col names">
               소마 킴<br/>
-              신민영<br/>
-              김지현
+              신민영&nbsp;<br/>
+              김지현&nbsp;
             </div>
           </div>
           <div class="sponsor_from">
