--- a/index.html
+++ b/index.html
@@ -155,11 +155,11 @@
       그 어느 때보다 개인의 취향이 중요하게 여겨지는 오늘날
     </div>
     <div class="desc_about">
-      이러한 변화는 취향이 크게 작용하는 노동/일에서 더 선명하게 드러납니다. 일상을 반영한 소셜미디어를 관리하고 자신의 브랜드를 만들어 홍보하는 일, 프리랜서로서의 활동과 성과를 포트폴리오로 효과적으로 보여주는 일,
+      이러한 변화는 취향이 크게 작용하는 노동/일에서 더 선명하게 드러납니다. <br/>일상을 반영한 소셜미디어를 관리하고 자신의 브랜드를 만들어 홍보하는 일,<br/> 프리랜서로서의 활동과 성과를 포트폴리오로 효과적으로 보여주는 일,<br/>
       저희는 취미로서의 취향이 아닌, <span class="bold">일로서의 취향이 가져오는 차이</span>에 주목했습니다.<br/><br/>
 
-      '감각, 스타일, 무드'라는 단어는 종종 취향이라는 말로 다시 돌아옵니다. 하지만  <span class="bold">취향을 기반으로 한 일이 정당한 노동으로 여겨지고 있나요? 왜 이러한 영역에서 여성들이 주축이 될까요?</span>
-      좋아하는 것들을 탐구하고 타인에게 보여주는 과정은 어떠한 고민을 가져올까요? 우리는  <span class="bold">'취향을 일로 가져간' 7명의 여성들</span>과 직접 만나 함께 이야기 나눴습니다.
+      '감각, 스타일, 무드'라는 단어는 종종 취향이라는 말로 다시 돌아옵니다.<br/> 하지만  <span class="bold">취향을 기반으로 한 일이 정당한 노동으로 여겨지고 있나요? 왜 이러한 영역에서 여성들이 주축이 될까요?</span><br/>
+      좋아하는 것들을 탐구하고 타인에게 보여주는 과정은 어떠한 고민을 가져올까요? <br/>우리는  <span class="bold">'취향을 일로 가져간' 7명의 여성들</span>과 직접 만나 함께 이야기 나눴습니다.
 
     </div>
     <div class="more_about">
@@ -393,11 +393,11 @@
           <div class="copyright">
             <div class="l">Copyright 2021. 프리몸 all rights reserved.</div>
             <div class="r">tastefulwork2021@gmail.com</div>
-            <!-- <div class="instagram">
+            <div class="instagram">
               <a href="https://www.instagram.com/tastefulwork/" target="_blank" rel="noopener noreferrer">
                 <img src="./assets/images/instagram.png" alt="">
               </a>
-            </div> -->
+            </div>
           </div>
         </div>
         <div class="right">
