fix. 텍스트 수정

--- a/2.html
+++ b/2.html
@@ -222,7 +222,7 @@
                 드래그도 하신다고 들었어요. 시작하시게 된 계기가 있나요?
               </div>
               <div class="interview_a p2">
-                  5년 전에 보광동에 이사를 가게 되면서 지금 보광동 패밀리라고 부르는 친구들을 만나게 되었어요. 그 때 제가 RuPaul＇s Drag Race 에 빠져 있을 때였어요. 그래서 퀴어 서점을 하고 있는 박철이라는 친구에게 같이 하자고 했어요. 지금은 유튜브 채널도 많지만 그땐 그런 것도 없고 둘이 어떻게 하는 지도 몰랐는데 그냥 해 본거예요. 그걸 인스타그램에 올렸더니 다른 친구들도 “나도 할래.”라고 해서 모이게 된 거예요. 그런데 이게 너무 웃긴게 드래그 하는 모임이 힐링 모임이 되어버렸어요. 저희는 전문가가 아니라 3시간씩 걸리는데 하면서 “어머 너 눈썹 세련이다~” 막 이러면서 칭찬, 바디 포지티브를 하게 되는 거예요. 그러면서 너무 돈독해졌어요.
+                  5년 전에 보광동에 이사를 가게 되면서 지금 보광동 패밀리라고 부르는 친구들을 만나게 되었어요. 그 때 제가 RuPaul＇s Drag Race 에 빠져 있을 때였어요. 그래서 퀴어 서점을 하고 있는 박철희라는 친구에게 같이 하자고 했어요. 지금은 유튜브 채널도 많지만 그땐 그런 것도 없고 둘이 어떻게 하는 지도 몰랐는데 그냥 해 본거예요. 그걸 인스타그램에 올렸더니 다른 친구들도 “나도 할래.”라고 해서 모이게 된 거예요. 그런데 이게 너무 웃긴게 드래그 하는 모임이 힐링 모임이 되어버렸어요. 저희는 전문가가 아니라 3시간씩 걸리는데 하면서 “어머 너 눈썹 세련이다~” 막 이러면서 칭찬, 바디 포지티브를 하게 되는 거예요. 그러면서 너무 돈독해졌어요.
                 <br/>
                 그리곤 “한 번 나가보자.”라고 되어서 이태원에 나갔어요. 이태원 해밀턴 뒷골목이 캣콜링도 많고 그래서 정말 싫어했어요. 그런데 여러 명이 함께 분장을 하고 있으니까 저도 모르게 저의 행동이 바뀌는 거예요. 남성들이 쳐다보면 “뭘 봐?”이러면서 당당하게 걷고 그러면서 해방감을 느꼈어요. 그러면서 디제이 할 때도 드래그를 하기 시작한 거죠.
                 <br/>
