fix. 텍스트 수정

--- a/index.html
+++ b/index.html
@@ -158,7 +158,6 @@
       이러한 변화는 취향이 크게 작용하는 노동/일에서 더 선명하게 드러납니다. <br/>일상을 반영한 소셜미디어를 관리하고 자신의 브랜드를 만들어 홍보하는 일,<br/> 프리랜서로서의 활동과 성과를 포트폴리오로 효과적으로 보여주는 일,<br/>
       저희는 취미로서의 취향이 아닌, <span class="bold">일로서의 취향이 가져오는 차이</span>에 주목했습니다.<br/><br/>
 
-      '감각, 스타일, 무드'라는 단어는 종종 취향이라는 말로 다시 돌아옵니다.<br/> 하지만  <span class="bold">취향을 기반으로 한 일이 정당한 노동으로 여겨지고 있나요? 왜 이러한 영역에서 여성들이 주축이 될까요?</span><br/>
       좋아하는 것들을 탐구하고 타인에게 보여주는 과정은 어떠한 고민을 가져올까요? <br/>우리는  <span class="bold">'취향을 일로 가져간' 7명의 여성들</span>과 직접 만나 함께 이야기 나눴습니다.
 
     </div>
@@ -168,10 +167,9 @@
             취향 제 일 프로젝트의 기획자를 소개합니다.
         </div>
         <div class="members">
-          페미니즘과 인류학을 공부하며 사람들을 만나고 글을 쓰는 <span class="bold">유민</span><br/>
+          인류학을 공부하며 사람들을 만나고 글을 쓰는 <span class="bold">유민</span><br/>
           프리랜스 에디터와 콘텐츠 마케터로 일하고 있는 <span class='bold'>은해</span><br/>
           여성과 일에 주목하는 사회인 <span class='bold'>지연</span><br/>
-  
         </div>
       </div>
       <!-- <div class="more_about_btn">
@@ -295,7 +293,6 @@
               </span>
           </div>
           </a>
-          <img class="sponsor_icon" src="assets/images/sponsor.png"/>
         </div>
         <div class="col">
           <a class="nav_menu_btn" href="./3">
@@ -420,14 +417,6 @@
               신민영&nbsp;<br/>
               김지현&nbsp;
             </div>
-          </div>
-          <div class="sponsor_from">
-            본 프로젝트는 여성가족부 2021년 성평등 문화 추진단 지원을 받아 진행되었습니다.
-          </div>
-          <div class="sponsor_icons">
-            <a href="http://www.mogef.go.kr" target="_blank" rel="noopener noreferrer"></a>
-            <img class="woman" src="assets/images/logo_woman.png" alt="여성가족부 로고"/>
-            <img class="butterknife" src="assets/images/logo_butterknife.png" alt="버터나이프 크루 로고">
           </div>
         </div>
       </div>
